k8s/word-picker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-picker
spec:
  selector:
    matchLabels:
      app: word-picker
  template:
    metadata:
      labels:
        app: word-picker
    spec:
      containers:
        - name: word-picker
          image: registry.timo-hermans.nl/word-picker:beta-1
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 44
      imagePullSecrets:
        - name: regcred
